--- a/public/assets/css/components.css
+++ b/public/assets/css/components.css
@@ -269,7 +269,7 @@
 .navigation > li > ul li.active > a,
 .navigation > li > ul li.active > a:hover,
 .navigation > li > ul li.active > a:focus {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: #443541;
   color: #fff;
 }
 .navigation .navigation-header {
